fixing scroll reveal overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -708,28 +708,28 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .mt-12 {
   margin-top: 3rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .box-border {
@@ -766,10 +766,6 @@ video {
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-8\/12 {
-  width: 66.666667%;
 }
 
 .w-10\/12 {
@@ -983,11 +979,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1001,11 +992,6 @@ video {
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
 }
 
 .py-5 {
@@ -1081,9 +1067,9 @@ video {
   font-size: 12px;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-\[25px\] {
@@ -1116,11 +1102,6 @@ video {
 
 .text-\[22px\] {
   font-size: 22px;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -1434,6 +1415,11 @@ video {
     position: relative;
   }
 
+  .tablet\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .tablet\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1444,11 +1430,6 @@ video {
     margin-right: 1.25rem;
   }
 
-  .tablet\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
   .tablet\:mt-0 {
     margin-top: 0px;
   }
@@ -1457,16 +1438,16 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .tablet\:mt-20 {
+    margin-top: 5rem;
+  }
+
   .tablet\:mt-10 {
     margin-top: 2.5rem;
   }
 
   .tablet\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .tablet\:mt-20 {
-    margin-top: 5rem;
   }
 
   .tablet\:mt-7 {
@@ -1497,24 +1478,16 @@ video {
     width: 25%;
   }
 
-  .tablet\:w-10\/12 {
-    width: 83.333333%;
-  }
-
   .tablet\:w-4\/12 {
     width: 33.333333%;
   }
 
-  .tablet\:w-8\/12 {
-    width: 66.666667%;
-  }
-
-  .tablet\:w-auto {
-    width: auto;
-  }
-
   .tablet\:w-full {
     width: 100%;
+  }
+
+  .tablet\:w-10\/12 {
+    width: 83.333333%;
   }
 
   .tablet\:flex-row {
@@ -1549,34 +1522,16 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .tablet\:space-y-1 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-  }
-
-  .tablet\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .tablet\:space-x-7 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.75rem * var(--tw-space-x-reverse));
     margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .tablet\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  .tablet\:space-y-1 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
-    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-  }
-
-  .tablet\:space-y-7 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+    margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
   }
 
   .tablet\:px-0 {
@@ -1604,6 +1559,11 @@ video {
     padding-bottom: 0.75rem;
   }
 
+  .tablet\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
   .tablet\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
@@ -1617,11 +1577,6 @@ video {
   .tablet\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-  }
-
-  .tablet\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
   }
 
   .tablet\:py-10 {
@@ -1661,6 +1616,11 @@ video {
     text-align: center;
   }
 
+  .tablet\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .tablet\:text-\[25px\] {
     font-size: 25px;
   }
@@ -1679,11 +1639,6 @@ video {
 
   .tablet\:text-\[20px\] {
     font-size: 20px;
-  }
-
-  .tablet\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .tablet\:leading-tight {
@@ -1759,10 +1714,6 @@ video {
     display: block;
   }
 
-  .md\:inline {
-    display: inline;
-  }
-
   .md\:h-8 {
     height: 2rem;
   }
@@ -1835,18 +1786,6 @@ video {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .md\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(0px * var(--tw-space-x-reverse));
-    margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:space-y-10 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
   }
 
   .md\:bg-\[\#f1f1f5\] {
